fix overflow

--- a/wp-content/themes/atmoss-vert/sass/site/homepage/_portfolio.scss
+++ b/wp-content/themes/atmoss-vert/sass/site/homepage/_portfolio.scss
@@ -32,7 +32,7 @@
   .content_slider
   {
     width: 100%;
-    //overflow: hidden;
+    overflow-x: scroll;
     height: 100vh;
   }
 
